# wpm-api-vyos

./: .gitignore  Cargo.toml  README.md  openapi.yaml  spec.yaml
.github/workflows/: ci.yaml
debian/: service
debian/DEBIAN/: postinst
debian/opt/vyatta-wpm-api/: config.j2  config.py
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/api-token/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/dns/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/endpoint/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/interface/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/listen-address/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/listen-address/node.tag/port/: node.def
debian/opt/vyatta/share/vyatta-cfg/templates/service/wpm-api/name/: node.def
debian/opt/vyatta/share/vyatta-op/templates/restart/wpm-api/: node.def
debian/opt/vyatta/share/vyatta-op/templates/show/log/wpm-api/: node.def
debian/opt/vyatta/share/vyatta-op/templates/show/wpm-api/: node.def
src/: cfg.rs  main.rs  schemas.rs  utils.rs  views.rs
