[package]
name = "wpm-api-vyos"
version = "0.0.1-git"
edition = "2021"
authors = ["Nico Felbinger <https://github.com/secshellnet>"]
license = "AGPL-3.0"
description = "API package for wireguard peer manager on vyos"

[dependencies]
tokio = { version = "1.26", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tokio-tungstenite = { version = "0.18", default-features = false, features = ["handshake"] }
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
clap = { version = "4.1", features = ["derive", "env"] }
tracing = "0.1"
axum = { version = "0.6.16", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
http = "0.2"
base64 = "0.13.0"
regex = "1.5"
tower-http = { version = "0.4", features = ["sensitive-headers", "trace", "validate-request", "auth"], default-features = false }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
assets = [
    ["target/x86_64-unknown-linux-musl/release/wpm-api-vyos", "/usr/bin/wpm-api-vyos", "755"],
    # TODO add vyos config tree structure, see https://github.com/pkgs-hub/vyatta-web
]
